deployment/stacks/application/base/template/network-policy/allow-external-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: uec-sf-pc-allow-external-ingress
spec:
  podSelector:
    matchLabels:
      app: uec-sf-pc
  ingress:
  - from: []
    ports:
    - protocol: TCP
      port: 443
